Updated tags and categories

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author: Apotheoun
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://apotheone.github.io
+url: https://apotheoun.netlify.com
 root: /
 permalink: :year/:month/:day/:title/
 ? permalink_defaults
