--- a/themes/clean-blog/_config.yml
+++ b/themes/clean-blog/_config.yml
@@ -2,14 +2,14 @@
 menu:
     Home: /
     Archives: /archives
-    #Tags: /tags
-    #Categories: /categories
+    # Tags: /tags
+    # Categories: /categories
     Github:
         url: https://github.com/apotheone/apotheone.github.io
         icon: github
 
 # Title on top left of menu. Leave empty to use main blog title
-menu_title: Apotheoun
+menu_title: <Dev notes/>
 
 # URL of the Home page image
 index_cover: http://www.codeblocq.com/assets/projects/hexo-theme-clean-blog/img/home-bg.jpg
