--- a/themes/clean-blog/_config.yml
+++ b/themes/clean-blog/_config.yml
@@ -2,8 +2,8 @@
 menu:
     Home: /
     Archives: /archives
-    # Tags: /tags
-    # Categories: /categories
+    Tags: /tags
+    Categories: /categories
     Github:
         url: https://github.com/apotheone/apotheone.github.io
         icon: github
