--- a/themes/clean-blog/_config.yml
+++ b/themes/clean-blog/_config.yml
@@ -28,7 +28,7 @@ comments:
         comment_colorscheme: light
 
 # Google Analytics Tracking ID
-? google_analytics
+? google_analytics: UA-127706319-1
 
 # Addthis ID
 ? addthis
